# whipped

./: .env.example  .gitignore  CLAUDE.md  README.md  page.tsx  pyproject.toml
.claude/: settings.local.json
.claude/commands/: next-task.md
.claude/skills/architecture/: SKILL.md
.claude/skills/data-ingestion/: SKILL.md
.claude/skills/pricing-and-scoring/: SKILL.md
data/insurance/: insurance_model.npz
data/sample/: profile.json  sample.csv
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  nav.tsx  not-found.tsx  page.tsx
frontend/app/analyze/: page.tsx
frontend/app/lib/: shared.ts  verdict-context.tsx
frontend/app/market/: page.tsx
frontend/app/ownership/: page.tsx
scripts/: build_market_database.py  download_data.py  evaluate.py  prepare_sample_data.py  prepare_synthetic_insurance_data.py  run_demo.py  run_web.py  test_sample_data.py  train_insurance_model.py
src/whipped/: app.py  config.py  webapp.py
src/whipped/domain/: models.py
src/whipped/features/: extract.py
src/whipped/ingest/: datasets.py  listings.py  market_database.py
src/whipped/insurance/: model.py  synthetic.py
src/whipped/pricing/: brand_tax.py  fair_range.py
src/whipped/scoring/: counterfactual.py  explain.py  explainability.py  ownership.py  ripoff.py  risk.py
tests/: test_brand_tax.py  test_insurance_model.py  test_market_database.py  test_negotiation.py  test_ownership.py  test_ripoff_index.py  test_smoke.py  test_synthetic_insurance.py  test_webapp.py
