[project]
name = "whipped"
version = "0.1.0"
description = "UK used-car pricing intelligence engine"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
